include/dss_capi.h

    /*
    Array of strings with all XYCurve names.
    */
    DSS_CAPI_DLL void XYCurves_Get_AllNames(char*** ResultPtr, int32_t* ResultCount);
    /*
    Same as XYCurves_Get_AllNames but using the global buffer interface for results
    */
    DSS_CAPI_DLL void XYCurves_Get_AllNames_GR(void);
    /*
    Factor to scale X values from original curve
    */
    DSS_CAPI_DLL void XYCurves_Set_Xscale(double Value);
    DSS_CAPI_DLL void XYCurves_Set_Xshift(double Value);
    /*
    Amount to scale Y values from original curve. Represents a curve shift.
    */
    DSS_CAPI_DLL void XYCurves_Set_Yscale(double Value);
    DSS_CAPI_DLL void XYCurves_Set_Yshift(double Value);
    DSS_CAPI_DLL int32_t XYCurves_Get_idx(void);
    DSS_CAPI_DLL void XYCurves_Set_idx(int32_t Value);