src/v7/CAPI_XYCurves.pas


begin
    Result := 0;
    if ActiveCircuit <> NIL then
    begin
        pXYCurve := XYCurveClass.GetActiveObj;
        if pXYCurve <> NIL then
        begin
            Result := pXYCurve.FYshift;
        end
        else
        begin
            DoSimpleMsg('No active XYCurve Object found.', 51011);
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Xscale(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;

begin
    if ActiveCircuit <> NIL then
    begin
        pXYCurve := XYCurveClass.GetActiveObj;
        if pXYCurve <> NIL then
        begin
            pXYCurve.FXScale := Value;
        end
        else
        begin
            DoSimpleMsg('No active XYCurve Object found.', 51010);
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Xshift(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;

begin
    if ActiveCircuit <> NIL then
    begin
        pXYCurve := XYCurveClass.GetActiveObj;
        if pXYCurve <> NIL then
        begin
            pXYCurve.FXShift := Value;
        end
        else
        begin
            DoSimpleMsg('No active XYCurve Object found.', 51010);
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Yscale(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;

begin
    if ActiveCircuit <> NIL then
    begin
        pXYCurve := XYCurveClass.GetActiveObj;
        if pXYCurve <> NIL then
        begin
            pXYCurve.FYScale := Value;
        end
        else
        begin
            DoSimpleMsg('No active XYCurve Object found.', 51010);
        end;
    end;

end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_Yshift(Value: Double); CDECL;
var
    pXYCurve: TXYCurveObj;

begin
    if ActiveCircuit <> NIL then
    begin
        pXYCurve := XYCurveClass.GetActiveObj;
        if pXYCurve <> NIL then
        begin
            pXYCurve.FYShift := Value;
        end
        else
        begin
            DoSimpleMsg('No active XYCurve Object found.', 51010);
        end;
    end;

end;
//------------------------------------------------------------------------------
function XYCurves_Get_idx(): Integer; CDECL;
begin
    Result := XYCurveClass.ElementList.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure XYCurves_Set_idx(Value: Integer); CDECL;
begin
    if XYCurveClass.ElementList.Get(Value) = NIL then
        DoSimpleMsg('Invalid XYCurve index: "' + IntToStr(Value) + '".', 656565);
end;
//------------------------------------------------------------------------------
procedure XYCurves_Get_AllNames(var ResultPtr: PPAnsiChar; ResultCount: PInteger); CDECL;
var
    Result: PPAnsiCharArray;
begin
    Result := DSS_RecreateArray_PPAnsiChar(ResultPtr, ResultCount, 1);
    Result[0] := DSS_CopyStringAsPChar('NONE');
    if ActiveCircuit = NIL then
        Exit;
    Generic_Get_AllNames(ResultPtr, ResultCount, XYCurveClass.ElementList, False);
end;

procedure XYCurves_Get_AllNames_GR(); CDECL;
// Same as XYCurves_Get_AllNames but uses global result (GR) pointers
begin
    XYCurves_Get_AllNames(GR_DataPtr_PPAnsiChar, GR_CountPtr_PPAnsiChar)
end;
//------------------------------------------------------------------------------
end.
